cros splitscreen: Adjust the snapped window position according to the new screen orientation.

We changed the default portrait screen orientation in a previous cl
(https://chromium-review.googlesource.com/c/chromium/src/+/877441).
This cl adjusts the splitscreen snapped windows' position in portrait
orientation according to the change.

Bug: 814408
Change-Id: I805a7eed6763b71ed7e534dd27b7b30a5768852e
Reviewed-on: https://chromium-review.googlesource.com/932321
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: min c <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540035}
Former-commit-id: 9d73c9eb4552a4540b4cd8eab1866538cb2c6617